--- a/css/style.css
+++ b/css/style.css
@@ -2052,7 +2052,7 @@ input[type="textarea"] {
 .modal-content__close::after {
   content: "";
   position: absolute;
-  top: 10px;
+  top: 0;
   left: 0;
   width: 19px;
   height: 3px;
