--- a/css/style.css
+++ b/css/style.css
@@ -1967,7 +1967,7 @@ box-shadow: 0 10px 10px 4px rgba(5,5,5,0.2);
 }
 .modal-content-show {
 	display: block;
-	animation: bounce 0.6s;
+	animation: bounce 10s;
 }
 .modal-error {
   animation: shake 0.6s;
@@ -1992,7 +1992,7 @@ box-shadow: 0 10px 10px 4px rgba(5,5,5,0.2);
     float: left;
 
 }
-.modal-content__password {
+.modal-content__email {
     float: right;
 }
 .modal-content__letter {
@@ -2005,7 +2005,7 @@ input[type="text"] {
 	height: 38px;
 	
 }
-input[type="password"] {
+input[type="email"] {
 	width: 202px;
 	height: 38px;
 	
