--- a/css/style.css
+++ b/css/style.css
@@ -824,9 +824,9 @@ input[type="search"]:hover + input[type="submit"] {
 .main-manufactures__branded-sign {
 	display: inline-block;
 	vertical-align: top;
-	width: 180px;
+	width: 174px;
 	height: 112px;
-	padding: 20px 18px;
+	padding: 19px 18px;
 	margin-right: 20px;
 	margin-bottom: 20px;
 	border: 1px solid #e7e7e7;
@@ -940,31 +940,32 @@ input[type="search"]:hover + input[type="submit"] {
 .services__item  .figure {
     position: absolute;
     top: 40px;
-    left: 410px;
+    left: 440px;
     z-index: 30;
 }
 .services__item:nth-child(2) .figure {
-	left: 470px;
-    
+	position: absolute;
+    top: 40px;
+    left: 470px;
+    z-index: 30;
 }
-.services__item:nth-child(3) .figure {
-	left: 450px;
-    
-}	   
 .services__item .shedow {
 	position: absolute;
 	top: 40px;
-	left: 150px;
+	left: 180px;
 	z-index: 20;
 }
 .services__item:nth-child(2) .shedow  {
-   	top: 52px;
+    position: absolute;
+	top: 52px;
 	left: 250px;
-	
+	z-index: 20;
 }
 .services__item:nth-child(3) .shedow  {
-    left: 165px;
-	
+    position: absolute;
+	top: 40px;
+	left: 155px;
+	z-index: 20;
 }
 .services__item .application {
 	display: block;
@@ -1015,9 +1016,8 @@ input[type="search"]:hover + input[type="submit"] {
 .main__left-block {
 	float:left;
 	width: 550px;
-	min-height: 500px;
+	min-height: 540px;
 	margin-right: 10px;
-	padding-top: 40px;
 
 }
 .main__left-block h2 {
@@ -1100,21 +1100,20 @@ ul.list-styled {
 	float: right;
 	width: 380px;
 	min-height: 355px;
-	padding-top: 40px;
 	
 }
 .main__right-block h2 {
 	font-size: 30px;
 	line-height: 24px;
 	font-weight: bold;
-	margin-bottom: 28px;
+	margin-bottom: 40px;
 	color: #000000;
 }
 .main__right-block p {
 	font-size: 13px;
 	line-height: 24px;
     font-weight: normal;
-    margin-bottom: 38px;
+    margin-bottom: 32px;
     color: #000000;
 }
 .main__right-block a {
@@ -1128,7 +1127,7 @@ ul.list-styled {
 	text-decoration: none;
 	text-align: center;
 	padding-top: 10px;
-	margin-top: 45px;
+	margin-top: 40px;
 	color: #ffffff;
 	background-color: #ee3643;
 	border-radius: 2px;
@@ -1311,11 +1310,10 @@ ul.list-styled {
 }
 .informaition__contact {
 	float: left;
-	width: 170px;
-	height: 85px;
+	width: 140px;
+	height: 95px;
 	margin-top: 20px;
-	padding-left: 20px;
-	padding-top: 10px;
+	margin-right: 2px;
 	
 }
 .informaition__contact p {
@@ -1346,11 +1344,9 @@ ul.list-styled {
 }
 .informaition__author {
 	float: right;
-	width: 100px;
-	height: 85px;
-	margin-top: 25px; 
-	padding-left: 10px;
-	padding-top: 10px;
+	width: 140px;
+	height: 95px;
+	margin-top: 24px; 
 	
 }
 .informaition__author p {
@@ -1688,7 +1684,6 @@ a.icon {
 .catalog-sorting li:last-child {
 	margin-right: 0;
 }
-
 .catalog-sorting a {
 	text-decoration: none;
 	text-transform: uppercase;
@@ -1697,10 +1692,6 @@ a.icon {
 	font-family: "Sans", "Arial", sans-serif;
 	color: #acaaa5;
 	border-bottom: 1px dotted #ee3643;
-}
-.catalog-sorting li:first-child a {
-	color: #ee3643;
-	border-bottom: none;
 }
 .catalog-sorting a:hover {
     color: #000;
@@ -1727,7 +1718,7 @@ a.icon {
     height: 0;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    border-bottom: 10px solid #ee3643;
+    border-bottom: 10px solid #c6c2bd;
 }
 .catalog-sorting__guides a:last-child {
     width: 0;
